--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,5 +13,5 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-- script: dotnet build WebAPI/ITButikAPI/ITButikAPI.csproj --configuration $(buildConfiguration)
+- script: dotnet build ITButikAPI/ITButikAPI.csproj --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
